--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -11,7 +11,7 @@
         android:id="@+id/imageView3"
         android:layout_width="150dp"
         android:layout_height="40dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -20,53 +20,62 @@
     <TextView
         android:id="@+id/textView"
         android:layout_width="80dp"
-        android:layout_height="30dp"
+        android:layout_height="25dp"
         android:layout_marginStart="60dp"
         android:layout_marginLeft="60dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="25dp"
+        android:layout_marginEnd="250dp"
+        android:layout_marginRight="250dp"
+        android:layout_marginBottom="500dp"
         android:fontFamily="@font/bmdohyeon"
         android:gravity="center"
         android:text="회원가입"
         android:textColor="#ffffff"
-        android:textSize="18dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
-
-    <EditText
-        android:id="@+id/editText1"
-        android:layout_width="270dp"
-        android:layout_height="35dp"
-        android:layout_marginStart="60dp"
-        android:layout_marginLeft="60dp"
-        android:layout_marginTop="35dp"
-        android:layout_marginEnd="60dp"
-        android:layout_marginRight="60dp"
-        android:background="@drawable/edittext_signup_whitebox"
-        android:ems="10"
-        android:fontFamily="@font/bmdohyeon"
-        android:inputType="textPersonName"
-        android:text="아이디"
-        android:textColor="#A0A0A0"
-        android:textSize="14dp"
+        android:textSize="17dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView3" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/edt_nickname"
+        android:layout_width="270dp"
+        android:layout_height="35dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginLeft="60dp"
+        android:layout_marginTop="55dp"
+        android:layout_marginEnd="60dp"
+        android:layout_marginRight="60dp"
+        android:layout_marginBottom="450dp"
+        android:background="@drawable/edittext_signup_whitebox"
+        android:ems="10"
+        android:fontFamily="@font/bmdohyeon"
+        android:hint="아이디"
+        android:inputType="textPersonName"
+        android:textColor="#A0A0A0"
+        android:textColorHint="#A0A0A0"
+        android:textSize="14dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
+
+    <EditText
+        android:id="@+id/edt_bio"
         android:layout_width="270dp"
         android:layout_height="35dp"
         android:layout_marginTop="15dp"
         android:background="@drawable/edittext_signup_whitebox"
         android:ems="10"
         android:fontFamily="@font/bmdohyeon"
-        android:inputType="textPersonName"
-        android:text="비밀번호"
+        android:hint="비밀번호"
+        android:inputType="textPassword"
         android:textColor="#A0A0A0"
+        android:textColorHint ="#A0A0A0"
         android:textSize="14dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText1" />
+        app:layout_constraintTop_toBottomOf="@+id/edt_nickname" />
 
     <EditText
         android:id="@+id/editText3"
@@ -76,13 +85,14 @@
         android:background="@drawable/edittext_signup_whitebox"
         android:ems="10"
         android:fontFamily="@font/bmdohyeon"
+        android:hint="이름"
         android:inputType="textPersonName"
-        android:text="이름"
         android:textColor="#A0A0A0"
+        android:textColorHint ="#A0A0A0"
         android:textSize="14dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText2" />
+        app:layout_constraintTop_toBottomOf="@+id/edt_bio" />
 
     <EditText
         android:id="@+id/editText4"
@@ -92,9 +102,10 @@
         android:background="@drawable/edittext_signup_whitebox"
         android:ems="10"
         android:fontFamily="@font/bmdohyeon"
+        android:hint="닉네임"
         android:inputType="textPersonName"
-        android:text="닉네임"
         android:textColor="#A0A0A0"
+        android:textColorHint ="#A0A0A0"
         android:textSize="14dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -108,9 +119,10 @@
         android:background="@drawable/edittext_signup_whitebox"
         android:ems="10"
         android:fontFamily="@font/bmdohyeon"
+        android:hint="상태메세지(선택)"
         android:inputType="textPersonName"
-        android:text="상태메세지(선택)"
         android:textColor="#A0A0A0"
+        android:textColorHint ="#A0A0A0"
         android:textSize="14dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -124,9 +136,10 @@
         android:background="@drawable/edittext_signup_whitebox"
         android:ems="10"
         android:fontFamily="@font/bmdohyeon"
-        android:inputType="textPersonName"
-        android:text="이메일"
+        android:hint="이메일"
+        android:inputType="textPersonName|textWebEmailAddress"
         android:textColor="#A0A0A0"
+        android:textColorHint="#A0A0A0"
         android:textSize="14dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -135,43 +148,16 @@
     <TextView
         android:id="@+id/textView4"
         android:layout_width="40dp"
-        android:layout_height="25dp"
+        android:layout_height="30dp"
         android:layout_marginStart="70dp"
         android:layout_marginLeft="70dp"
         android:layout_marginTop="10dp"
         android:fontFamily="@font/bmdohyeon"
-        android:textColor="#ffffff"
         android:gravity="center"
         android:text="성별"
+        android:textColor="#ffffff"
+        android:textSize="16dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText6" />
-
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="40dp"
-        android:layout_height="25dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="10dp"
-        android:fontFamily="@font/bmdohyeon"
-        android:textColor="#ffffff"
-        android:gravity="center"
-        android:text="남자"
-        app:layout_constraintStart_toEndOf="@+id/textView4"
-        app:layout_constraintTop_toBottomOf="@+id/editText6" />
-
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="40dp"
-        android:layout_height="25dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="10dp"
-        android:fontFamily="@font/bmdohyeon"
-        android:textColor="#ffffff"
-        android:gravity="center"
-        android:text="여자"
-        app:layout_constraintStart_toEndOf="@+id/textView5"
         app:layout_constraintTop_toBottomOf="@+id/editText6" />
 
     <EditText
@@ -182,10 +168,12 @@
         android:background="@null"
         android:ems="10"
         android:fontFamily="@font/bmdohyeon"
+        android:hint="생년월일"
         android:inputType="textPersonName"
         android:padding="10dp"
-        android:text="생년월일"
-        android:textSize="14dp"
+        android:textColor="#ffffff"
+        android:textColorHint="#ffffff"
+        android:textSize="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText6" />
@@ -195,15 +183,52 @@
         style="?android:attr/borderlessButtonStyle"
         android:layout_width="80dp"
         android:layout_height="30dp"
-        android:layout_marginEnd="25dp"
-        android:layout_marginRight="25dp"
+        android:layout_marginStart="270dp"
+        android:layout_marginLeft="270dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginRight="50dp"
         android:layout_marginBottom="25dp"
-        android:background="@drawable/button_signup"
+        android:background="@drawable/button_signup_sellector"
         android:fontFamily="@font/bmdohyeon"
         android:text="완료"
         android:textColor="#A0A0A0"
         android:textSize="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editText5" />
+
+    <RadioGroup
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="100dp"
+        android:layout_marginRight="100dp"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textView4"
+        app:layout_constraintTop_toBottomOf="@+id/editText6">
+
+        <RadioButton
+            android:id="@+id/fragment1"
+            android:layout_width="70dp"
+            android:layout_height="30dp"
+            android:checked="false"
+            android:fontFamily="@font/bmdohyeon"
+            android:text="남자"
+            android:textColor="#ffffff" />
+
+        <RadioButton
+            android:id="@+id/fragment2"
+            android:layout_width="70dp"
+            android:layout_height="30dp"
+            android:checked="false"
+            android:fontFamily="@font/bmdohyeon"
+            android:text="여자"
+            android:textColor="#ffffff" />
+    </RadioGroup>
 
 </android.support.constraint.ConstraintLayout>
