--- a/app/src/main/res/layout/activity_signup_facebook.xml
+++ b/app/src/main/res/layout/activity_signup_facebook.xml
@@ -12,21 +12,21 @@
         android:id="@+id/imageView"
         android:layout_width="150dp"
         android:layout_height="40dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/signup_logo" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btn_terminate"
         style="?android:attr/borderlessButtonStyle"
         android:layout_width="80dp"
         android:layout_height="30dp"
-        android:layout_marginEnd="25dp"
-        android:layout_marginRight="25dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginRight="50dp"
         android:layout_marginBottom="25dp"
-        android:background="@drawable/button_signup"
+        android:background="@drawable/button_signup_sellector"
         android:fontFamily="@font/bmdohyeon"
         android:text="완료"
         android:textColor="#A0A0A0"
@@ -41,44 +41,49 @@
         android:layout_marginStart="60dp"
         android:layout_marginLeft="60dp"
         android:layout_marginTop="130dp"
+        android:layout_marginEnd="250dp"
+        android:layout_marginRight="250dp"
+        android:layout_marginBottom="400dp"
         android:fontFamily="@font/bmdohyeon"
         android:gravity="center"
         android:text="회원가입"
         android:textColor="#ffffff"
         android:textSize="18dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <EditText
-        android:id="@+id/editText1"
+        android:id="@+id/edt_nickname"
         android:layout_width="270dp"
         android:layout_height="35dp"
         android:layout_marginTop="10dp"
         android:background="@drawable/edittext_signup_whitebox"
         android:ems="10"
         android:fontFamily="@font/bmdohyeon"
+        android:hint="닉네임"
         android:inputType="textPersonName"
-        android:text="닉네임"
-        android:textColor="#A0A0A0"
+        android:textColorHint="#A0A0A0"
         android:textSize="14dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/edt_bio"
         android:layout_width="270dp"
         android:layout_height="35dp"
         android:layout_marginTop="15dp"
         android:background="@drawable/edittext_signup_whitebox"
         android:ems="10"
         android:fontFamily="@font/bmdohyeon"
+        android:hint="상태메세지(선택)"
         android:inputType="textPersonName"
-        android:text="상태메세지(선택)"
-        android:textColor="#A0A0A0"
+        android:textColorHint="#A0A0A0"
         android:textSize="14dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText1" />
+        app:layout_constraintTop_toBottomOf="@+id/edt_nickname" />
 
 </android.support.constraint.ConstraintLayout>
