--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,87 +11,99 @@
         android:id="@+id/imageView"
         android:layout_width="150dp"
         android:layout_height="40dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/login_logo" />
 
-    <EditText
-        android:id="@+id/editText1"
-        android:layout_width="270dp"
-        android:layout_height="35dp"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/edittext_login_whitebox"
-        android:ems="10"
-        android:fontFamily="@font/bmdohyeon"
-        android:inputType="textPersonName"
-        android:text="비밀번호"
-        android:textColor="#A0A0A0"
-        android:textSize="14dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText2" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/edt_bio"
         android:layout_width="270dp"
         android:layout_height="35dp"
-        android:layout_marginTop="145dp"
+        android:layout_marginTop="100dp"
+        android:layout_marginBottom="300dp"
         android:background="@drawable/edittext_login_whitebox"
         android:ems="10"
-        android:fontFamily="@font/bmdohyeon"
+        android:hint="아이디"
         android:inputType="textPersonName"
-        android:text="아이디"
         android:textColor="#A0A0A0"
-        android:textSize="14dp"
+        android:textColorHint="#A0A0A0"
+        android:textCursorDrawable="@null"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
-    <TextView
-        android:id="@+id/textView1"
+
+    <EditText
+        android:id="@+id/edt_nickname"
         android:layout_width="270dp"
         android:layout_height="35dp"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/textview_login_greenbox"
-        android:fontFamily="@font/bmdohyeon"
-        android:gravity="center"
-        android:text="로그인"
-        android:textAlignment="center"
-        android:textColor="#ffffff"
-        android:textSize="18dp"
+        android:layout_marginTop="12dp"
+        android:background="@drawable/edittext_login_whitebox"
+        android:ems="10"
+        android:hint="비밀번호"
+        android:inputType="textWebPassword"
+        android:textColor="#A0A0A0"
+        android:textColorHint="#A0A0A0"
+        android:textSize="16sp"
+        android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText1" />
+        app:layout_constraintTop_toBottomOf="@+id/edt_bio" />
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="80dp"
-        android:layout_marginLeft="80dp"
-        android:layout_marginTop="20dp"
+        android:layout_width="180dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="68dp"
+        android:layout_marginLeft="68dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="120dp"
+        android:layout_marginRight="120dp"
         android:fontFamily="@font/bmdohyeon"
         android:gravity="center"
-        android:text="아직 아이디가 없으세요?"
+        android:text="아직 아이디가 없으세요?   |"
+        android:textColor="#ffffff"
         android:textSize="15dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView1" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_login" />
 
     <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="20dp"
+        android:id="@+id/tv_signup"
+        android:layout_width="65dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="25dp"
+        android:layout_marginRight="25dp"
         android:fontFamily="@font/bmdohyeon"
-        android:text="@string/login_signin"
+        android:gravity="center"
+        android:text="회원가입"
         android:textAllCaps="false"
+        android:textColor="#ffffff"
         android:textSize="15dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView2"
-        app:layout_constraintTop_toBottomOf="@+id/textView1" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_login" />
 
+    <Button
+        android:id="@+id/btn_login"
+        style="?android:attr/borderlessButtonStyle"
+        android:layout_width="270dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="12dp"
+        android:background="@drawable/button_login_box_sellector"
+        android:fontFamily="@font/bmdohyeon"
+        android:text="로그인"
+        android:textColor="#ffffff"
+        android:textSize="17dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edt_nickname" />
 
 </android.support.constraint.ConstraintLayout>
