--- a/app/src/main/res/layout/activity_event.xml
+++ b/app/src/main/res/layout/activity_event.xml
@@ -175,6 +175,7 @@
         app:layout_constraintVertical_bias="0.0">
 
         <ListView
+            android:id="@+id/lv_event"
             android:layout_width="match_parent"
             android:layout_height="80dp" />
 
