--- a/app/src/main/res/layout/listview_event.xml
+++ b/app/src/main/res/layout/listview_event.xml
@@ -9,13 +9,13 @@
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/constraintLayout2"
-        android:layout_width="70dp"
+        android:layout_width="55dp"
         android:layout_height="100dp">
 
         <ImageView
-            android:id="@+id/iv_img"
+            android:id="@+id/iv_profile"
             android:layout_width="match_parent"
-            android:layout_height="60dp"
+            android:layout_height="55dp"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="20dp"
             android:src="@drawable/imagebutton_event_record_sellector"
@@ -35,7 +35,7 @@
         app:layout_constraintStart_toEndOf="@+id/constraintLayout2">
 
         <TextView
-            android:id="@+id/tv_name1"
+            android:id="@+id/tv_nickname"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:fontFamily="@font/bmdohyeon"
@@ -43,7 +43,7 @@
             android:paddingLeft="10dp"
             android:text="닉네임"
             android:textColor="#A0A0A0"
-            android:textSize="18sp"
+            android:textSize="17sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -53,7 +53,7 @@
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/constraintLayout4"
-        android:layout_width="150dp"
+        android:layout_width="180dp"
         android:layout_height="60dp"
         android:background="@drawable/edittext_login_whitebox"
         android:orientation="horizontal"
@@ -64,56 +64,64 @@
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"
         app:layout_constraintVertical_bias="1.0">
 
+        <Button
+            android:id="@+id/btn_play"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center_vertical"
+            android:background="@drawable/event_recording_start"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_runningtime"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/tv_runningtime"
             android:layout_width="wrap_content"
             android:layout_height="60dp"
             android:layout_gravity="center"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
-            android:layout_marginEnd="28dp"
-            android:layout_marginRight="28dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginRight="5dp"
             android:fontFamily="@font/bmdohyeon"
             android:gravity="center"
-            android:text="14:00"
+            android:text="4:00"
             android:textAlignment="center"
             android:textColor="#000000"
-            android:textSize="23sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/constraintLayout4"
-            app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" />
-
-        <ProgressBar
-            android:layout_width="100dp"
-            android:layout_height="50dp"
-            android:layout_marginEnd="150dp"
-            android:layout_marginRight="150dp"
-            app:layout_constraintBottom_toBottomOf="@+id/textView3"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/constraintLayout4"
-            app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" />
-
-        <Button
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_gravity="center_vertical"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginEnd="290dp"
-            android:layout_marginRight="290dp"
-            android:layout_marginBottom="10dp"
-            android:background="@drawable/event_recording_start"
-            android:gravity="center"
+            android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toEndOf="@+id/constraintLayout2"
-            app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"
-            app:layout_constraintVertical_bias="0.833" />>
+            app:layout_constraintStart_toStartOf="@+id/constraintLayout4"
+            app:layout_constraintTop_toTopOf="parent" />
 
+        <ProgressBar
+            android:id="@+id/progressBar2"
+            android:layout_width="70dp"
+            android:layout_height="50dp"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_runningtime"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/constraintLayout4"
+            app:layout_constraintTop_toTopOf="@+id/tv_runningtime" />
     </android.support.constraint.ConstraintLayout>
 
+    <TextView
+        android:id="@+id/tv_nowtime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:text="오후 3:30"
+        android:textColor="#000000"
+        android:textSize="15sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/constraintLayout4"
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"
+        app:layout_constraintVertical_bias="1.0" />
 
 </android.support.constraint.ConstraintLayout>
 
