--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -19,10 +19,10 @@
 
 
     <EditText
-        android:id="@+id/edt_bio"
+        android:id="@+id/edt_id"
         android:layout_width="270dp"
         android:layout_height="35dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="150dp"
         android:layout_marginBottom="300dp"
         android:background="@drawable/edittext_login_whitebox"
         android:ems="10"
@@ -40,7 +40,7 @@
 
 
     <EditText
-        android:id="@+id/edt_nickname"
+        android:id="@+id/edt_password"
         android:layout_width="270dp"
         android:layout_height="35dp"
         android:layout_marginTop="12dp"
@@ -54,7 +54,7 @@
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edt_bio" />
+        app:layout_constraintTop_toBottomOf="@+id/edt_id" />
 
     <TextView
         android:id="@+id/textView2"
@@ -104,6 +104,6 @@
         android:textSize="17dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edt_nickname" />
+        app:layout_constraintTop_toBottomOf="@+id/edt_password" />
 
 </android.support.constraint.ConstraintLayout>
