--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -38,7 +38,7 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView3" />
 
     <EditText
-        android:id="@+id/edt_nickname"
+        android:id="@+id/edt_password"
         android:layout_width="270dp"
         android:layout_height="35dp"
         android:layout_marginStart="60dp"
@@ -61,7 +61,7 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView3" />
 
     <EditText
-        android:id="@+id/edt_bio"
+        android:id="@+id/edt_id"
         android:layout_width="270dp"
         android:layout_height="35dp"
         android:layout_marginTop="15dp"
@@ -75,7 +75,7 @@
         android:textSize="14dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edt_nickname" />
+        app:layout_constraintTop_toBottomOf="@+id/edt_password" />
 
     <EditText
         android:id="@+id/editText3"
@@ -92,7 +92,7 @@
         android:textSize="14dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edt_bio" />
+        app:layout_constraintTop_toBottomOf="@+id/edt_id" />
 
     <EditText
         android:id="@+id/editText4"
