--- a/app/src/main/res/layout/activity_signup_facebook.xml
+++ b/app/src/main/res/layout/activity_signup_facebook.xml
@@ -55,7 +55,7 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <EditText
-        android:id="@+id/edt_nickname"
+        android:id="@+id/edt_password"
         android:layout_width="270dp"
         android:layout_height="35dp"
         android:layout_marginTop="10dp"
@@ -71,7 +71,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <EditText
-        android:id="@+id/edt_bio"
+        android:id="@+id/edt_id"
         android:layout_width="270dp"
         android:layout_height="35dp"
         android:layout_marginTop="15dp"
@@ -84,6 +84,6 @@
         android:textSize="14dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edt_nickname" />
+        app:layout_constraintTop_toBottomOf="@+id/edt_password" />
 
 </android.support.constraint.ConstraintLayout>
