--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -19,7 +19,7 @@
 
 
     <EditText
-        android:id="@+id/edt_bio"
+        android:id="@+id/edt_id"
         android:layout_width="270dp"
         android:layout_height="35dp"
         android:layout_marginTop="100dp"
@@ -40,9 +40,10 @@
 
 
     <EditText
-        android:id="@+id/edt_nickname"
+        android:id="@+id/edt_password"
         android:layout_width="270dp"
         android:layout_height="35dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginTop="12dp"
         android:background="@drawable/edittext_login_whitebox"
         android:ems="10"
@@ -52,6 +53,7 @@
         android:textColorHint="#A0A0A0"
         android:textSize="16sp"
         android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edt_bio" />
@@ -96,14 +98,15 @@
         style="?android:attr/borderlessButtonStyle"
         android:layout_width="270dp"
         android:layout_height="40dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="8dp"
         android:background="@drawable/button_login_box_sellector"
         android:fontFamily="@font/bmdohyeon"
         android:text="로그인"
         android:textColor="#ffffff"
         android:textSize="17dp"
+        app:layout_constraintBottom_toTopOf="@+id/edt_id"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edt_nickname" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
 </android.support.constraint.ConstraintLayout>
