--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -85,10 +85,10 @@
         android:background="@drawable/edittext_signup_whitebox"
         android:ems="10"
         android:fontFamily="@font/bmdohyeon"
-        android:hint="이름"
+        android:hint="비밀번호 확인"
         android:inputType="textPersonName"
         android:textColor="#A0A0A0"
-        android:textColorHint ="#A0A0A0"
+        android:textColorHint="#A0A0A0"
         android:textSize="14dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -98,14 +98,14 @@
         android:id="@+id/editText4"
         android:layout_width="270dp"
         android:layout_height="35dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="15dp"
         android:background="@drawable/edittext_signup_whitebox"
         android:ems="10"
         android:fontFamily="@font/bmdohyeon"
         android:hint="닉네임"
         android:inputType="textPersonName"
         android:textColor="#A0A0A0"
-        android:textColorHint ="#A0A0A0"
+        android:textColorHint="#A0A0A0"
         android:textSize="14dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -115,14 +115,14 @@
         android:id="@+id/editText5"
         android:layout_width="270dp"
         android:layout_height="35dp"
-        android:layout_marginTop="90dp"
+        android:layout_marginTop="50dp"
         android:background="@drawable/edittext_signup_whitebox"
         android:ems="10"
         android:fontFamily="@font/bmdohyeon"
         android:hint="상태메세지(선택)"
         android:inputType="textPersonName"
         android:textColor="#A0A0A0"
-        android:textColorHint ="#A0A0A0"
+        android:textColorHint="#A0A0A0"
         android:textSize="14dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -157,24 +157,6 @@
         android:text="성별"
         android:textColor="#ffffff"
         android:textSize="16dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText6" />
-
-    <EditText
-        android:id="@+id/editText"
-        android:layout_width="270dp"
-        android:layout_height="42dp"
-        android:layout_marginTop="40dp"
-        android:background="@null"
-        android:ems="10"
-        android:fontFamily="@font/bmdohyeon"
-        android:hint="생년월일"
-        android:inputType="textPersonName"
-        android:padding="10dp"
-        android:textColor="#ffffff"
-        android:textColorHint="#ffffff"
-        android:textSize="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText6" />
 
