--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,9 +17,8 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/login_logo" />
 
-
     <EditText
-        android:id="@+id/edt_id"
+        android:id="@+id/edt_password1"
         android:layout_width="270dp"
         android:layout_height="35dp"
         android:layout_marginTop="150dp"
@@ -40,10 +39,9 @@
 
 
     <EditText
-        android:id="@+id/edt_password"
+        android:id="@+id/edt_username"
         android:layout_width="270dp"
         android:layout_height="35dp"
-        android:layout_marginBottom="8dp"
         android:layout_marginTop="12dp"
         android:background="@drawable/edittext_login_whitebox"
         android:ems="10"
@@ -53,10 +51,9 @@
         android:textColorHint="#A0A0A0"
         android:textSize="16sp"
         android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edt_id" />
+        app:layout_constraintTop_toBottomOf="@+id/edt_password1" />
 
     <TextView
         android:id="@+id/textView2"
@@ -98,15 +95,14 @@
         style="?android:attr/borderlessButtonStyle"
         android:layout_width="270dp"
         android:layout_height="40dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="12dp"
         android:background="@drawable/button_login_box_sellector"
         android:fontFamily="@font/bmdohyeon"
         android:text="로그인"
         android:textColor="#ffffff"
         android:textSize="17dp"
-        app:layout_constraintBottom_toTopOf="@+id/edt_id"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edt_password" />
+        app:layout_constraintTop_toBottomOf="@+id/edt_username" />
 
 </android.support.constraint.ConstraintLayout>
