--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -38,7 +38,7 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView3" />
 
     <EditText
-        android:id="@+id/edt_password"
+        android:id="@+id/edt_username"
         android:layout_width="270dp"
         android:layout_height="35dp"
         android:layout_marginStart="60dp"
@@ -61,7 +61,7 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView3" />
 
     <EditText
-        android:id="@+id/edt_id"
+        android:id="@+id/edt_password1"
         android:layout_width="270dp"
         android:layout_height="35dp"
         android:layout_marginTop="15dp"
@@ -75,27 +75,27 @@
         android:textSize="14dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edt_password" />
+        app:layout_constraintTop_toBottomOf="@+id/edt_username" />
 
     <EditText
-        android:id="@+id/editText3"
+        android:id="@+id/edt_password2"
         android:layout_width="270dp"
         android:layout_height="35dp"
         android:layout_marginTop="15dp"
         android:background="@drawable/edittext_signup_whitebox"
         android:ems="10"
         android:fontFamily="@font/bmdohyeon"
-        android:hint="이름"
+        android:hint="비밀번호확인"
         android:inputType="textPersonName"
         android:textColor="#A0A0A0"
-        android:textColorHint ="#A0A0A0"
+        android:textColorHint="#A0A0A0"
         android:textSize="14dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edt_id" />
+        app:layout_constraintTop_toBottomOf="@+id/edt_password1" />
 
     <EditText
-        android:id="@+id/editText4"
+        android:id="@+id/nickname"
         android:layout_width="270dp"
         android:layout_height="35dp"
         android:layout_marginTop="8dp"
@@ -109,10 +109,10 @@
         android:textSize="14dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText3" />
+        app:layout_constraintTop_toBottomOf="@+id/edt_password2" />
 
     <EditText
-        android:id="@+id/editText5"
+        android:id="@+id/bio"
         android:layout_width="270dp"
         android:layout_height="35dp"
         android:layout_marginTop="90dp"
@@ -126,10 +126,10 @@
         android:textSize="14dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText6" />
+        app:layout_constraintTop_toBottomOf="@+id/email" />
 
     <EditText
-        android:id="@+id/editText6"
+        android:id="@+id/email"
         android:layout_width="270dp"
         android:layout_height="35dp"
         android:layout_marginTop="15dp"
@@ -143,7 +143,7 @@
         android:textSize="14dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText4" />
+        app:layout_constraintTop_toBottomOf="@+id/nickname" />
 
     <TextView
         android:id="@+id/textView4"
@@ -158,25 +158,8 @@
         android:textColor="#ffffff"
         android:textSize="16dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText6" />
+        app:layout_constraintTop_toBottomOf="@+id/email" />
 
-    <EditText
-        android:id="@+id/editText"
-        android:layout_width="270dp"
-        android:layout_height="42dp"
-        android:layout_marginTop="40dp"
-        android:background="@null"
-        android:ems="10"
-        android:fontFamily="@font/bmdohyeon"
-        android:hint="생년월일"
-        android:inputType="textPersonName"
-        android:padding="10dp"
-        android:textColor="#ffffff"
-        android:textColorHint="#ffffff"
-        android:textSize="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText6" />
 
     <Button
         android:id="@+id/button"
@@ -197,7 +180,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText5" />
+        app:layout_constraintTop_toBottomOf="@+id/bio" />
 
     <RadioGroup
         android:layout_width="wrap_content"
@@ -210,7 +193,7 @@
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView4"
-        app:layout_constraintTop_toBottomOf="@+id/editText6">
+        app:layout_constraintTop_toBottomOf="@+id/email">
 
         <RadioButton
             android:id="@+id/fragment1"
