--- a/app/src/main/res/layout/activity_signup_facebook.xml
+++ b/app/src/main/res/layout/activity_signup_facebook.xml
@@ -95,7 +95,7 @@
         app:layout_constraintTop_toBottomOf="@+id/edt_password1" />
 
     <EditText
-        android:id="@+id/nickname"
+        android:id="@+id/edt_nickname"
         android:layout_width="270dp"
         android:layout_height="35dp"
         android:layout_marginTop="15dp"
@@ -112,7 +112,7 @@
         app:layout_constraintTop_toBottomOf="@+id/edt_password2" />
 
     <EditText
-        android:id="@+id/bio"
+        android:id="@+id/edt_bio"
         android:layout_width="270dp"
         android:layout_height="35dp"
         android:layout_marginTop="50dp"
@@ -126,10 +126,10 @@
         android:textSize="14dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/email" />
+        app:layout_constraintTop_toBottomOf="@+id/edt_email" />
 
     <EditText
-        android:id="@+id/email"
+        android:id="@+id/edt_email"
         android:layout_width="270dp"
         android:layout_height="35dp"
         android:layout_marginTop="15dp"
@@ -143,7 +143,7 @@
         android:textSize="14dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nickname" />
+        app:layout_constraintTop_toBottomOf="@+id/edt_nickname" />
 
     <TextView
         android:id="@+id/textView4"
@@ -158,10 +158,10 @@
         android:textColor="#ffffff"
         android:textSize="16dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/email" />
+        app:layout_constraintTop_toBottomOf="@+id/edt_email" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btn_submit"
         style="?android:attr/borderlessButtonStyle"
         android:layout_width="80dp"
         android:layout_height="30dp"
@@ -179,7 +179,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bio" />
+        app:layout_constraintTop_toBottomOf="@+id/edt_bio" />
 
     <RadioGroup
         android:id="@+id/rg_gender"
@@ -193,7 +193,7 @@
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView4"
-        app:layout_constraintTop_toBottomOf="@+id/email">
+        app:layout_constraintTop_toBottomOf="@+id/edt_email">
 
         <RadioButton
             android:id="@+id/rb_male"
