--- a/app/src/main/res/layout/activity_list_or_create.xml
+++ b/app/src/main/res/layout/activity_list_or_create.xml
@@ -12,34 +12,58 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:background="@drawable/navbg">
-
-        <Button
-            android:id="@+id/CreateRoom"
-            android:layout_width="wrap_content"
+        android:orientation="vertical"
+        android:background="@drawable/navbg"
+        >
+        <LinearLayout
+            android:layout_width="50dp"
             android:layout_height="50dp"
-            android:layout_weight="1"
-            android:background="@drawable/custom_button_white"
-            android:layout_gravity="center_vertical"
-            android:layout_margin="20dp"
-            android:fontFamily="@font/bmdohyeon"
-            android:textColor="@color/point"
-            android:textSize="20sp"
-            android:text="방 만들기" />
+            android:orientation="horizontal"
+            >
 
-        <Button
-            android:id="@+id/ViewRoomList"
-            android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            android:layout_weight="1"
-            android:background="@drawable/custom_button_white"
-            android:layout_gravity="center_vertical"
-            android:layout_margin="20dp"
-            android:fontFamily="@font/bmdohyeon"
-            android:textColor="@color/point"
-            android:textSize="20sp"
-            android:text="방 둘러보기" />
+            <Button
+                android:id="@+id/NavLOC"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:layout_margin="5dp"
+                android:background="@drawable/nav_image"
+                />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            >
+
+            <Button
+                android:id="@+id/CreateRoom"
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:layout_weight="1"
+                android:background="@drawable/custom_button_white"
+                android:layout_gravity="center_vertical"
+                android:layout_margin="20dp"
+                android:fontFamily="@font/bmdohyeon"
+                android:textColor="@color/point"
+                android:textSize="20sp"
+                android:text="방 만들기" />
+
+            <Button
+                android:id="@+id/ViewRoomList"
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:layout_weight="1"
+                android:background="@drawable/custom_button_white"
+                android:layout_gravity="center_vertical"
+                android:layout_margin="20dp"
+                android:fontFamily="@font/bmdohyeon"
+                android:textColor="@color/point"
+                android:textSize="20sp"
+                android:text="방 둘러보기" />
+        </LinearLayout>
+
     </LinearLayout>
 
     <android.support.design.widget.NavigationView
