--- a/app/src/main/res/layout/activity_vople_admin_event.xml
+++ b/app/src/main/res/layout/activity_vople_admin_event.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main_drawer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/BrGray"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".MainActivity">
-
+    tools:context=".VopleAdminEvent"
+    >
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -16,39 +14,15 @@
         android:background="@drawable/navbg"
         >
 
-        <LinearLayout
+        <TextView
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:orientation="horizontal"
-            >
-
-            <LinearLayout
-                android:layout_width="50dp"
-                android:layout_height="50dp">
-
-                <Button
-                    android:id="@+id/NavMain"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:layout_margin="5dp"
-                    android:background="@drawable/nav_image"
-                    />
-
-            </LinearLayout>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="50dp"
-                android:layout_marginTop="10dp"
-                android:gravity="center"
-                android:fontFamily="@font/bmdohyeon"
-                android:textColor="@color/white"
-                android:textSize="20sp"
-                android:text="방 목록" />
-
-        </LinearLayout>
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:gravity="center"
+            android:fontFamily="@font/bmdohyeon"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            android:text="보플이 쏜다 !" />
 
         <ListView
             android:layout_width="match_parent"
@@ -73,7 +47,6 @@
             android:layout_width="match_parent"
             layout = "@layout/header"
             />
-
     </android.support.design.widget.NavigationView>
 
 </android.support.v4.widget.DrawerLayout>
