--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,6 @@
     <color name="white">#ffffff</color>
     <color name="DG">#6c6c6c</color>
     <color name="point">#008080</color>
+    <color name="WUJUActionbar">#8bdfad</color>
     <color name="BrGray">#e9e9e9</color>
 </resources>
