--- a/app/src/main/res/layout/createroom_pop.xml
+++ b/app/src/main/res/layout/createroom_pop.xml
@@ -83,6 +83,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:id="@+id/SituationOnlyShow"
+        android:visibility="gone"
         >
 
         <TextView
@@ -120,7 +121,7 @@
 
         <Spinner
             android:id="@+id/PlayScript"
-            android:layout_width="20dp"
+            android:layout_width="100dp"
             android:layout_height="match_parent"
             android:layout_weight="1" />
 
