--- a/app/src/main/res/layout/activity_event.xml
+++ b/app/src/main/res/layout/activity_event.xml
@@ -18,7 +18,7 @@
         app:srcCompat="@drawable/event_top_bar" />
 
     <Button
-        android:id="@+id/btn_back_following"
+        android:id="@+id/btn_back"
         android:layout_width="30dp"
         android:layout_height="40dp"
         android:layout_marginStart="10dp"
@@ -42,7 +42,7 @@
         android:textColor="@color/colorPrimary"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView4"
-        app:layout_constraintStart_toEndOf="@+id/btn_back_following"
+        app:layout_constraintStart_toEndOf="@+id/btn_back"
         app:layout_constraintTop_toTopOf="@+id/imageView4" />
 
     <Button
@@ -137,9 +137,27 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView4">
 
-
     </ScrollView>
 
+    <TextView
+        android:id="@+id/tv_script"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginRight="50dp"
+        android:layout_marginBottom="40dp"
+        android:textAlignment="center"
+        android:gravity="center"
+        android:textColor="#A0A0A0"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@+id/lv_event_role"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/scrollView2"
+        app:layout_constraintTop_toTopOf="@+id/scrollView2" />
     <ListView
         android:id="@+id/lv_event"
         android:layout_width="0dp"
